0027194: Possible division by zero in IntPatch_WLineTool

Correct handling for division by zero is added. This prevents exception when FPE is enabled